Adding some missing includes and fixing up travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,14 @@ before_install:
   - wget http://www.cmake.org/files/v3.5/cmake-3.5.2.tar.gz
   - tar xf cmake-3.5.2.tar.gz
   - cd cmake-3.5.2
-  - ./configure
-  - sudo make install
+  - ./configure > /dev/null
+  - sudo make install > /dev/null
   - cd ../..
   - sudo apt-get update -qq
   - sudo apt-get install -qq python3 python3-pip
   - pip3 install --user dew-pacman
 script:
   - python3 -m dew --cmake-generator "Unix Makefiles"
-  - mkdir build && cd build && cmake -G "Unix Makefiles" .. -DCMAKE_PREFIX_PATH="../.dew/install" -DCMAKE_INSTALL_PREFIX="../.dew/install"
+  - mkdir build && cd build && cmake -G "Unix Makefiles" .. -DCMAKE_PREFIX_PATH="$PWD/../.dew/install" -DCMAKE_INSTALL_PREFIX="$PWD/../.dew/install"
   - cmake --build .
   - ./soundstone_test
