Lots of refactoring

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,14 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 project(soundstone_example LANGUAGES CXX VERSION 0.1)
 
-file(GLOB_RECURSE SOUNDSTONE_EXAMPLE_SOURCE_FILES "./src/*.cpp" "./src/*.hpp")
-add_executable(soundstone_example ${SOUNDSTONE_EXAMPLE_SOURCE_FILES})
+file(GLOB_RECURSE source_files "./src/*.cpp" "./src/*.hpp")
+add_executable(soundstone_example ${source_files})
 target_link_libraries(soundstone_example soundstone)
-target_include_directories(soundstone_example PRIVATE
-    $<TARGET_PROPERTY:soundstone,INTERFACE_INCLUDE_DIRECTORIES>
-)
-set_target_properties(soundstone_example
-    PROPERTIES
-        CXX_STANDARD 11
-        CXX_STANDARD_REQUIRED ON
-)
